# convlstm_abnormal_human_activity_recognition

./: .gitignore  README.md  demo.py  labels.json  main.py  pyproject.toml  requirements.txt
experiments/20260312_092614/: metrics.json
experiments/20260312_092718/: metrics.json
experiments/20260312_093630/: metrics.json
experiments/20260312_094556/: metrics.json
experiments/20260312_095403/: metrics.json
experiments/20260325_084623/: metrics.json
experiments/20260325_112931/: metrics.json
experiments/20260325_114341/: metrics.json
experiments/20260331_224139/: metrics.json
experiments/20260331_224608/: metrics.json
experiments/20260331_225010/: metrics.json
experiments/20260401_094759/: metrics.json
experiments/20260408_204414/: metrics.json
experiments/20260408_221540/: metrics.json
experiments/20260408_234804/: metrics.json
experiments/20260409_114252/: metrics.json
experiments/20260409_151955/: metrics.json
experiments/20260411_104743/: metrics.json
experiments/20260411_123133/: metrics.json
experiments/20260411_173525/: metrics.json
experiments/20260411_174431/: metrics.json
experiments/20260411_181052/: metrics.json
experiments/20260412_162605/: metrics.json
experiments/20260414_132904/: metrics.json
experiments/20260414_155137/: metrics.json
experiments/20260414_175323/: metrics.json
experiments/20260502_181602/: metrics.json
src/: __init__.py  __main__.py  clean_dataset.py  dataset.py  evaluate.py  evaluation.py  label.json  labels.json  labels.py  model.py  train.py  training.py  utils.py
(+1 files in other folders)
